syntax = "proto3";

package blobservice;

service Blobber {
  rpc GetBytes (BlobRequest) returns (stream BlobResponse) {}
}

message BlobRequest {
  uint64 nbytes = 1;
}

message BlobResponse {
  bytes bytes = 1;
}
